2003-03-05  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by John.

	Step towards policy API chantes - removed unneeded policy and URL
	arguments from unableToImplementPolicy:
	
        * WebView.subproj/WebControllerPolicyDelegate.h:
        * WebView.subproj/WebFramePrivate.h:
        * WebView.subproj/WebFramePrivate.m:
        * WebView.subproj/WebMainResourceClient.m:
        (-[WebMainResourceClient continueAfterContentPolicy:response:]):

2003-03-06  Ed Voas  voas@apple.com

        Reviewed by Richard.

		First cut of Carbon view support. It will need tweaking as we go,
		but I think I finally have all the assertions taken care of, and
		I also believe that I have the drawing glitches all sorted out now.

        * Carbon.subproj/CarbonUtils.h: Added.
        * Carbon.subproj/CarbonUtils.m: Added.
        (InitWebKitForCarbon):
        (PoolCleaner):
        (ConvertNSImageToCGImageRef):
        * Carbon.subproj/CarbonWindowAdapter.h: Added.
        * Carbon.subproj/CarbonWindowAdapter.m: Added.
        (+[CarbonWindowAdapter frameViewClassForStyleMask:]):
        (-[CarbonWindowAdapter initWithContentRect:styleMask:backing:defer:]):
        (-[CarbonWindowAdapter initWithCarbonWindowRef:takingOwnership:disableOrdering:carbon:]):
        (-[CarbonWindowAdapter setViewsNeedDisplay:]):
        (-[CarbonWindowAdapter initWithCarbonWindowRef:takingOwnership:]):
        (-[CarbonWindowAdapter dealloc]):
        (-[CarbonWindowAdapter windowRef]):
        (-[CarbonWindowAdapter _hasWindowRef]):
        (-[CarbonWindowAdapter _managesWindowRef]):
        (-[CarbonWindowAdapter _removeWindowRef]):
        (-[CarbonWindowAdapter _carbonWindowClass]):
        (-[CarbonWindowAdapter reconcileToCarbonWindowBounds]):
        (-[CarbonWindowAdapter sendSuperEvent:]):
        (-[CarbonWindowAdapter _cancelKey:]):
        (-[CarbonWindowAdapter _commonAwake]):
        (-[CarbonWindowAdapter _destroyRealWindow:]):
        (-[CarbonWindowAdapter _oldPlaceWindow:]):